swen430as2/tests/valid/casts/Cast_Valid_05.while
int f(int[]|null i) {
    if(i == null) {
	return 0;
    } else {
	return |(int[]) i|;
    }
}

void main() {
    assert f([1]) == 1;
    assert f([1,2]) == 2;
    assert f(null) == 0;
}
