swen430as2/tests/invalid/unions/UnionType_Invalid_8-TC01.while
int f(int|int[] xs) {
    return xs[0];
}
